crates/myso-core/src/authority/snapshots/myso_core__authority__execution_time_estimator__tests__execution_time_observer_v94.snap
---
source: crates/myso-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 94
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 0
          - ~
        - - 9
          - secs: 0
            nanos: 15000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 1
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 19000000
  - - MergeCoins
    - observations:
        - - 10
          - secs: 0
            nanos: 42000000
        - - 1
          - secs: 0
            nanos: 21000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 32000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 7
          - secs: 0
            nanos: 79000000
        - - 5
          - secs: 0
            nanos: 54000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - TransferObjects
    - observations:
        - - 7
          - secs: 0
            nanos: 0
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 21000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 21000000
  - - Upgrade
    - observations:
        - - 4
          - secs: 0
            nanos: 187000000
        - - 6
          - secs: 0
            nanos: 609000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 9
          - secs: 0
            nanos: 325000000
      stake_weighted_median:
        secs: 0
        nanos: 609000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 4
          - secs: 0
            nanos: 456000000
        - - 7
          - secs: 0
            nanos: 58000000
        - - 10
          - secs: 0
            nanos: 140000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 456000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 724000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 266000000
  - - transfer_objects_5_items
    - secs: 0
      nanos: 126000000
  - - split_coins_3_amounts
    - secs: 0
      nanos: 244000000
  - - merge_coins_3_sources
    - secs: 0
      nanos: 128000000
  - - make_move_vec_2_elements
    - secs: 0
      nanos: 57000000
  - - mixed_commands
    - secs: 0
      nanos: 186000000
  - - upgrade_package
    - secs: 0
      nanos: 609000000
